--- a/templates/components/custom/pages/new-contact-us-form.html
+++ b/templates/components/custom/pages/new-contact-us-form.html
@@ -18,15 +18,15 @@
     </div>
     
     <div class="form-field col-full">
-        <input required type="tel" class="form-input section-text-12" name="contact_address" id="contact_address" placeholder="Address">
+        <input required type="text" class="form-input section-text-12" name="contact_address" id="contact_address" placeholder="Address">
     </div>
 
     <div class="flex wrap-small-col">
         <div class="form-field col-3">
-            <input required type="tel" class="form-input section-text-12" name="contact_city" id="contact_city" placeholder="City">
+            <input required type="text" class="form-input section-text-12" name="contact_city" id="contact_city" placeholder="City">
         </div>
         <div class="form-field col-3">
-            <input required type="tel" class="form-input section-text-12" name="contact_country" id="contact_country" placeholder="Country">
+            <input required type="text" class="form-input section-text-12" name="contact_country" id="contact_country" placeholder="Country">
         </div>
         <div class="form-field col-3">
             <input required type="tel" class="form-input section-text-12" name="contact_post-code" id="contact_post-code" placeholder="Post code">
