--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -28,6 +28,15 @@ body:not(.page-type-default){
     display: none;
 }
 
+ul,li {
+    list-style: none;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
 .container {
     width: 100%;
     margin: 0 auto;
