--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -74,6 +74,10 @@ a {
     &.container-1408 {
         max-width: 1408px;
     }
+
+    &.container-1964 {
+        max-width: 1964px;
+    }
 }
 
 .custom-section {
