--- a/templates/pages/custom/page/about-us.html
+++ b/templates/pages/custom/page/about-us.html
@@ -90,9 +90,53 @@
                 </a>
             </div>
         </div>
-    </div>
 
-    <div class="container container-1408">
+        <div class="revolution" style="background-image: url(https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/oil-bg.jpg);">
+            <div class="container container-1408">
+                <div class="revolution__block revolution__top revolution-block__wrapper flex">
+                    <div class="block__left">
+                        <div class="image-group">
+                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/revolution-top-image.png" alt="Revolution Top Left Image">
+                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/revolution-top-image.png" alt="Revolution Top Left Image">
+                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/revolution-top-image.png" alt="Revolution Top Left Image">
+                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/revolution-top-image.png" alt="Revolution Top Left Image">
+                        </div>
+                    </div>
+                    <div class="block__right">
+                        <h2 class="heading-h2 color-main">Technical Expertise</h2>
+                        <p class="color-white section-text-14">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                        <p class="color-white section-text-14">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+
+                        <div class="top__quote bg-main">
+                            <div class="quote__content">
+                                <p class="color-black section-text-14">
+                                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud” 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="revolution__block revolution__bottom flex revolution-block__wrapper">
+                    <div class="block__left">
+                        <h2 class="heading-h2 color-main">Revolutionising The Industry</h2>
+                        <p class="color-white section-text-14">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                        <p class="color-white section-text-14">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                    </div>
+
+                    <div class="block__right">
+                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/revolution-bottom-right.png" alt="Revolution Right Image">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
