Update About Us Page

--- a/templates/pages/custom/page/about-us.html
+++ b/templates/pages/custom/page/about-us.html
@@ -14,22 +14,22 @@
             <div class="tabs__title bg-main flex-center">
                 <ul class="title__list flex-center">
                     <li class="title__item">
-                        <a href="#" class="title__link uppercase is-active custom-animation" data-step-animate="1">INTRODUCTION</a>
+                        <a href="#introduction" class="title__link uppercase is-active custom-animation" data-step-animate="1">INTRODUCTION</a>
                     </li>
                     <li class="title__item">
-                        <a href="#" class="title__link uppercase custom-animation" data-step-animate="2">HISTORY</a>
+                        <a href="#history" class="title__link uppercase custom-animation" data-step-animate="2">HISTORY</a>
                     </li>
                     <li class="title__item">
-                        <a href="#" class="title__link uppercase custom-animation" data-step-animate="3">TECHNICAL EXPERTS</a>
+                        <a href="#technical" class="title__link uppercase custom-animation" data-step-animate="3">TECHNICAL EXPERTS</a>
                     </li>
                     <li class="title__item">
-                        <a href="#" class="title__link uppercase custom-animation" data-step-animate="4">REVOLUTIONISING THE INDUSTRY</a>
+                        <a href="#revolution" class="title__link uppercase custom-animation" data-step-animate="4">REVOLUTIONISING THE INDUSTRY</a>
                     </li>
                 </ul>
             </div>
         </div>
 
-        <div class="about-us-video-with-text bg-black">
+        <div id="introduction" class="about-us-video-with-text bg-black">
             <div class="container container-1408">
                 <div class="about-us__wrapper flex">
                     <div class="about-us__info custom-animation" data-step-animate="1">
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="about-us-history bg-black">
+        <div id="history" class="about-us-history bg-black">
             <h2 class="heading-h2 color-main text-center custom-animation" data-step-animate="1">History</h2>
 
             <div class="section-slick history-banner__list" data-slick-show-desktop="3" data-slick-show-tablet="2" data-slick-show-mobile="1">
@@ -93,7 +93,7 @@
 
         <div class="revolution" style="background-image: url(https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/oil-bg.jpg);">
             <div class="container container-1408">
-                <div class="revolution__block revolution__top revolution-block__wrapper flex">
+                <div id="technical" class="revolution__block revolution__top revolution-block__wrapper flex">
                     <div class="block__left">
                         <div class="image-group">
                             <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/revolution-top-image.png" alt="Revolution Top Left Image">
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="revolution__block revolution__bottom flex revolution-block__wrapper">
+                <div id="revolution" class="revolution__block revolution__bottom flex revolution-block__wrapper">
                     <div class="block__left">
                         <h2 class="heading-h2 color-main">Revolutionising The Industry</h2>
                         <p class="color-white section-text-14">
