--- a/templates/pages/custom/page/about-us.html
+++ b/templates/pages/custom/page/about-us.html
@@ -14,16 +14,16 @@
             <div class="tabs__title bg-main flex-center">
                 <ul class="title__list flex-center">
                     <li class="title__item">
-                        <a href="#introduction" class="title__link uppercase is-active custom-animation" data-step-animate="1">INTRODUCTION</a>
+                        <a href="#introduction" class="title__link scroll-title uppercase is-active custom-animation" data-step-animate="1">INTRODUCTION</a>
                     </li>
                     <li class="title__item">
-                        <a href="#history" class="title__link uppercase custom-animation" data-step-animate="2">HISTORY</a>
+                        <a href="#history" class="title__link scroll-title uppercase custom-animation" data-step-animate="2">HISTORY</a>
                     </li>
                     <li class="title__item">
-                        <a href="#technical" class="title__link uppercase custom-animation" data-step-animate="3">TECHNICAL EXPERTS</a>
+                        <a href="#technical" class="title__link scroll-title uppercase custom-animation" data-step-animate="3">TECHNICAL EXPERTS</a>
                     </li>
                     <li class="title__item">
-                        <a href="#revolution" class="title__link uppercase custom-animation" data-step-animate="4">REVOLUTIONISING THE INDUSTRY</a>
+                        <a href="#revolution" class="title__link scroll-title uppercase custom-animation" data-step-animate="4">REVOLUTIONISING THE INDUSTRY</a>
                     </li>
                 </ul>
             </div>
