--- a/assets/scss/layouts/products/_productView.scss
+++ b/assets/scss/layouts/products/_productView.scss
@@ -83,3 +83,81 @@
         }
     }
 }
+
+
+/* Custom Start */
+.custom-productView {
+    .productView-images {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+
+        .productView-image {
+            width: 100%;
+            max-width: 674px;
+            margin-left: 16px;
+        }
+
+        .productView-thumbnails  {
+            width: 100%;
+            max-width: 122px;
+
+            .slick-arrow {
+                left: 50%;
+
+                &.slick-prev {
+                    top: 0;
+                    transform: translateX(-50%) rotate(90deg);
+                }
+
+                &.slick-next {
+                    top: 100%;
+                    transform: translateX(-50%) rotate(90deg);
+                }
+            }
+
+            .slick-list {
+                width: 100%;
+                margin: 0;
+            }
+
+            .productView-thumbnail {
+                .productView-thumbnail-link {
+                    max-width: 100%;
+                    height: 122px;
+                    padding: 0;
+                    border: 1px solid #707070;
+                    
+                    img {
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+
+        .productView-img-container {
+            max-width: 674px;
+            margin: 0;
+
+            border: 1px solid #707070;
+            &::after {
+                padding-bottom: 100%;
+            }
+        }
+    }
+
+    .productView-details {
+        &.product-data {
+            .productView-title {
+                margin: 0;
+            }
+
+            .productView-options {
+                .form-label {
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+}
