--- a/templates/components/custom/homepage/banner-button-text.html
+++ b/templates/components/custom/homepage/banner-button-text.html
@@ -1,7 +1,7 @@
 <section class="custom-banner-button-text custom-animation" data-step-animation="1" style="background: url(https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/orange-bg.jpg) center center no-repeat;">
     <div class="container container-main">
         <h2 class="heading-h2 uppercase color-body text-center fw-700">Free Technical Audit</h2>
-        <p class="section-text-14 color-white text-center">
+        <p class="section-text color-white text-center">
             Our technical team can offer application specific recommendations based on your individual requirements
         </p>
         <div class="flex-center">
