--- a/templates/pages/custom/page/about-us.html
+++ b/templates/pages/custom/page/about-us.html
@@ -1,11 +1,14 @@
 {{#partial "page"}}
 <section class="page">
     <div class="custom-about-us">
-        <div class="about-us__banner" style="background: url(https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/about-us-banner.png)">
+        <div class="about-us__banner">
+            <div class="banner__image">
+                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/about-us-banner.png" alt="About Us Banner Desktop">
+            </div>
             <div class="banner__content">
                 <h2 class="heading-h1 color-white custom-animation" data-step-animate="1">The TYGRIS Story</h2>
                 <div class="banner__learn-more">
-                    <a href="#" class="smooch-font color-main no-underline custom-animation" data-step-animate="2">Learn more</a>
+                    <a href="#" class="smooch-font color-main no-underline custom-animation" data-step-animate="2">Learn more...</a>
                 </div>
             </div>
         </div>
